add lowest common ancestor code, move MAGIC csvs into wheat subdir

--- a/wheat/wheatmodel_notes.tex
+++ b/wheat/wheatmodel_notes.tex
@@ -132,6 +132,19 @@ implemented
   computable (?)
 \end{itemize}
 
+
+\section{Resources}
+
+\begin{itemize}
+\item http://www.fao.org/nr/water/cropinfo\_wheat.html
+\item http://www.extension.umn.edu/agriculture/small-grains/growth-and-development/spring-wheat/
+\item http://www.extension.umn.edu/agriculture/small-grains/growth-and-development/spring-barley/
+\item http://www.croppro.com.au/cb\_pages/Wheat\_crop\_phenology.php
+\item http://www.fwi.co.uk/academy/lesson/growth-stage-30-31
+\item http://www.usask.ca/agriculture/plantsci/winter_cereals/winter-wheat-production-manual/chapter-10.php
+\end{itemize}
+
+
 \end{document}
 
 
